# ovh-ebtables-agent

./: README.md  build_rpm.sh  build_rpm_copr.sh  ovh-ebtables-agent.service  ovh-ebtables-agent.spec  setup.cfg  setup.py
etc/neutron/: ovh_ebtables_agent.ini
etc/neutron/rootwrap.d/: ovh-ebtables.filters
neutron-patches/: mtu.kind_of_patch  onlink_routes.patch
ovhagent/: ovh_ebtables_agent.py
