[install]
prefix=/
[metadata]
name = ovhagent 
version = 2014.2
summary = OpenStack Networking
description-file =
    README.md
author = Miguel Angel Ajo 
author-email = miguelangel@ajo.es 
home-page = https://github.com/mangelajo/ovh-ebtables-agent 
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    ovhagent 
data_files =
    etc/neutron =
        etc/neutron/ovh_ebtables_agent.ini
    etc/neutron/rootwrap.d =
        etc/neutron/rootwrap.d/ovh-ebtables.filters
    lib/systemd/system/ovh-ebtables-agent.service =
        ovh-ebtables-agent.service
    
scripts =
    bin/ovh-bridge-eth

[entry_points]
console_scripts =
    ovh-ebtables-agent = ovhagent.ovh_ebtables_agent:main

